--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -161,4 +161,7 @@
     <string name="hi">Hi...</string>
     <string name="color_type_1">Royal Green</string>
     <string name="delete_account">Delete Account</string>
+    <string name="welcome_back">Welcome back !</string>
+    <string name="welcome">Welcome</string>
+    <string name="error_password_does_not_match">Password does n\'t match</string>
 </resources>
