--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -166,4 +166,6 @@
     <string name="bdate_title">Set your birthday</string>
     <string name="genre_label">Genre</string>
     <string name="end_of_list">End of list.</string>
+    <string name="create_passkey">Create a passkey for password less authentication</string>
+    <string name="maybe_latter">Maybe latter</string>
 </resources>
