--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -168,4 +168,5 @@
     <string name="end_of_list">End of list.</string>
     <string name="create_passkey">Create a passkey for password less authentication</string>
     <string name="maybe_latter">Maybe latter</string>
+    <string name="Theme_title">T H E M E</string>
 </resources>
