--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="maybe_latter">Maybe latter</string>
     <string name="Theme_title">T H E M E</string>
     <string name="lofi_mix">Lofi mix</string>
+    <string name="account_deleted">It\'s sad to see you go :(</string>
 </resources>
