--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="error_username_invalid">Please enter a valid username</string>
     <string name="error_username_to_long">Username can\'t exceed 20 character</string>
     <string name="error_username_cant_start_with_underscore">Username can\'t start with underscore</string>
+    <string name="error_same_username">Username same as before.</string>
+    <string name="error_username_to_short">Username length must be at-least 3 letter.</string>
     <string name="error_username_empty">Username can\'t be empty</string>
     <string name="error_password_not_match">Password doesn\'t match</string>
     <string name="error_something_went_wrong">Opp\'s something went wrong try again</string>
@@ -176,4 +178,5 @@
     <string name="pic_them">Pic Them</string>
     <string name="royal_blue">Royal Blue</string>
     <string name="royal_green">Royal Green</string>
+
 </resources>
