added empty view screen

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -178,5 +178,7 @@
     <string name="pic_them">Pic Them</string>
     <string name="royal_blue">Royal Blue</string>
     <string name="royal_green">Royal Green</string>
+    <string name="build_your_favourite">Add this songs to favourite.</string>
+    <string name="check_out">check out</string>
 
 </resources>
