created explore album compact ui

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -180,5 +180,7 @@
     <string name="royal_green">Royal Green</string>
     <string name="build_your_favourite">Add this songs to favourite.</string>
     <string name="check_out">check out</string>
+    <string name="that_cool_artist">That Cool Artist</string>
+    <string name="that_cool_album">That Cool Album</string>
 
 </resources>
