creating add song to playlist compact screen

--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -191,5 +191,6 @@
     <string name="your_favourite">Your favourite</string>
     <string name="suggested_for_you">Suggested for you</string>
     <string name="you_may_also_like">You may also like</string>
+    <string name="search_anything">search anything</string>
 
 </resources>
