--- a/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/designsystem/src/main/res/values/strings.xml
@@ -196,5 +196,7 @@
     <string name="error_Playlist_name_to_long">Playlist name must not exceed 20 character</string>
     <string name="error_playlist_name_cant_start_with_underscore">Playlist name can\'t start with underscore</string>
     <string name="error_playlist_name_cant_contain_special_characters">Can\'t contain special corrector</string>
+    <string name="cancel_saving_album">Do you want to clear all selected albums ?</string>
+    <string name="saving_album_wait">Saving albums in progress. Please wait.</string>
 
 </resources>
