creating forgot password screen

--- a/Kyoku/core/presentation/ui/src/main/res/values/strings.xml
+++ b/Kyoku/core/presentation/ui/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="or_login_with">or login with</string>
     <string name="continue_with_google">continue with google</string>
     <string name="kyoku">Kyoku</string>
+    <string name="reset_password">Reset password</string>
+    <string name="reset_password_subtitle">\"Enter the email associated with your account and we will send an email with verification code to reset your password.\"</string>
+    <string name="back_button">back</string>
 </resources>
